--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "client": "cd ./client && npm run start",
     "server": "cd ./server && npm run start",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy:open": "cd ./client && npm run cy:open"
   },
   "keywords": [],
   "author": "",
