--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/cypress": "^7.0.6",
     "cypress": "^7.5.0",
     "react-styleguidist": "^11.1.7"
   }
