--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.12",
+    "node-fetch": "^2.6.1",
     "uuid": "^8.3.2"
   },
   "type": "module",
