--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "cd ./client && npm run build",
     "client": "cd ./client && npm run start",
     "server": "cd ./server && npm run start",
+    "start": "node ./server/server.js",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "cy:open": "cd ./client && npm run cy:open"
