--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "prop-types": "^15.7.2",
+    "quagga": "^0.12.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-rating": "^2.0.5",
